@@ -33,7 +33,8 @@ dependencies {
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:5.2.0'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'net.bytebuddy:byte-buddy:1.15.10'
 }
 
 checkstyle {
@@ -46,6 +47,7 @@ test {
     jacoco {
         destinationFile = file("${buildDir}/jacoco/test.exec")
     }
+    jvmArgs = ['-Dnet.bytebuddy.experimental=true']
 }
 
 task integrationTest(type: Test) {
